[gd_scene load_steps=8 format=3 uid="uid://blqlm5qgr1xy8"]

[ext_resource type="Script" uid="uid://crgx54r50f0c0" path="res://main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://bwp1unxvj6pig" path="res://Player.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://byb7wtefu302f" path="res://platform.tscn" id="2_0xm2m"]
[ext_resource type="Script" uid="uid://lx0ctpj6j8ae" path="res://platform_spawner.gd" id="4_1bvp3"]
[ext_resource type="Texture2D" uid="uid://uu3ueba16uie" path="res://img/background1.png" id="6_5vw27"]
[ext_resource type="Script" uid="uid://d1cn8xyji2o3m" path="res://score_manger.gd" id="7_272bh"]
[ext_resource type="Texture2D" uid="uid://c080dhthw5gfc" path="res://img/background2.png" id="7_kek77"]

[node name="Main" type="Node2D"]
script = ExtResource("1_h2yge")
texture_before_3000 = ExtResource("6_5vw27")
texture_after_3000 = ExtResource("7_kek77")

[node name="Player" parent="." instance=ExtResource("1_ig7tw")]

[node name="Platform" parent="." instance=ExtResource("2_0xm2m")]

[node name="UI" type="CanvasLayer" parent="."]
layer = 0

[node name="GameOverPanel" type="Control" parent="UI"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 280.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOverPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Title" type="Label" parent="UI/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="UI/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Your Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Retry" type="Button" parent="UI/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="Quit" type="Button" parent="UI/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 16.0
offset_top = 16.0
offset_right = 167.0
offset_bottom = 71.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Score: 0"

[node name="PlatformSpawner" type="Node2D" parent="."]
script = ExtResource("4_1bvp3")
platform_scene = ExtResource("2_0xm2m")

[node name="ScoreManager" type="Node" parent="."]
script = ExtResource("7_272bh")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="BackgroundImage" type="TextureRect" parent="BackgroundLayer"]
custom_minimum_size = Vector2(1024, 1536)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 5

[connection signal="pressed" from="UI/GameOverPanel/VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="UI/GameOverPanel/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
